# ras-commander-mcp

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  NonWorking_Tools.md  RAS Commander MCP.txt  README.md  TRADEMARKS.md  __main__.py  api.md  claude_desktop_config.json  example_client.py  mkdocs.yml  package.json  pyproject.toml  ras-commander API to use for developing tool calls.txt  requirements.txt  server.py  test_server.py
.ai_tools/: generate_llm_knowledge_bases.py
.ai_tools/llm_knowledge_bases/: ras-commander-hydro_fullrepo.txt  ras-commander-mcp-main_fullrepo.txt
.claude/: settings.local.json
.claude/rules/: clb-engineering-recommendation.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
Logo/: ras-commander-archydro.svg.txt  ras-commander_logo.svg.txt
docs/: index.md  installation.md  tools.md
ras-commander reference files/: HdfPlan.py  HdfResultsPlan.py  HdfResultsXsec.py  RasPrj.py
ras_commander_mcp/: __init__.py  _helpers.py  server.py  session.py  tools_execution.py  tools_qaqc.py  tools_remote.py  tools_review.py
tests/: conftest.py  test_all_tools.py  test_docs_tools.py  test_geometry_elements.py  test_result_helpers.py  test_server.py  test_single_tool.py
