[project]
name = "ras-commander-mcp"
version = "0.2.0"
description = "MCP server for HEC-RAS project interaction via ras-commander"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "CLB Engineering Corporation", email = "info@clbengineering.com"}]
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=3.0.0",
    "ras-commander>=0.1.0",
    "pandas>=1.3.0",
    "h5py>=3.0.0",
    "httpx>=0.25"
]

[project.urls]
Homepage = "https://github.com/gpt-cmdr/ras-commander-mcp"
Documentation = "https://github.com/gpt-cmdr/ras-commander"
Repository = "https://github.com/gpt-cmdr/ras-commander-mcp.git"
"Company" = "https://clbengineering.com/"

[project.scripts]
ras-commander-mcp = "server:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra"

[tool.hatch.build.targets.wheel]
packages = ["."]
